<resources>
    <string name="app_name">UltraMarket</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="orders">Orders</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="nav_header_image">nav_header_image</string>
    <string name="shop_by_brands">Shop By Brands</string>
    <string name="shop_by_featured">Featured Products</string>
    <string name="shop_by_latest">Latest Products</string>
    <string name="login">Login</string>
    <string name="great_offers">Great Offers</string>
    <string name="categories">Categories</string>
    <string name="wishlist">Wish List</string>
    <string name="track_product">Track Product</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms">Terms</string>
    <string name="about_us">About Us</string>
    <string name="open_nav_dawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="logo_image">logo image</string>
    <string name="ultra_market">Ultra Market</string>
    <string name="app_icon">app icon</string>
    <string name="enjoy_shopping">Enjoy your online shopping</string>
    <string name="product_image">product image</string>
    <string name="wishlist_icon">wishlist icon</string>
    <string name="please_login_to_add_items_to_wishlist">Please login to add items to wishlist</string>
    <string name="add">Add</string>
    <string name="orders_icon">orders icon</string>
    <string name="track_ur_order">Track Your Order</string>
    <string name="for_quick_checkout">(For Quick Checkout)</string>
    <string name="track_order">track order</string>
    <string name="cart">cart</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="facebook_application_id" translatable="false">com.example.ultramarket</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbcom.example.ultramarket</string>
    <string name="you_saved_money">You Saved %1$.2f</string>
    <string name="price">%1$.2f $</string>
    <string name="try_again">try again</string>
    <string name="show_more">Show More</string>
    <string name="show_less">show less</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="network_connection">Network Connection</string>
    <string name="you_dont_have_connection">sorry, you don\'t have internet connection</string>
    <string name="splash_logo_image">splash logo image</string>
    <string name="you_are_offline">you are offline</string>
    <string name="you_are_online">you are online</string>
    <string name="back_online">back_online</string>
    <string name="location">location</string>
    <string name="lets_try_to_find_if_we_deliver_to_your_place">lets try to find if we deliver to your place</string>
    <string name="choose_your_location">CHOOSE YOUR LOCATION</string>
    <string name="use_my_current_location">USE MY CURRENT LOCATION</string>
    <string name="choose_manually">Choose manually\nOpen MAP</string>
    <string name="allow_location_perimission">you should allow app to know your location</string>
    <string name="location_access_message">to add locatoin you need to allow locatioin access</string>
    <string name="permission_denied">permission denied …!</string>
    <string name="permission_confirmed">Permission Confirmed</string>
    <string name="you_must_signin_first">you must sign in first</string>
    <string name="location_saved">location saved</string>
    <string name="edit">Edit</string>
    <string name="country">%1$s</string>
    <string name="city">%1$s .city</string>
    <string name="road">%1$s .road</string>
    <string name="floor">%1$s .floor</string>
    <string name="personal_info">Personal Info.</string>
    <string name="email_container">%1$s</string>
    <string name="phone_container">%1$s</string>
    <string name="profile">Profile</string>
    <string name="failed_location_details_go_to_profile">failed to get location details. please go to profile and add it manually</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="save">Save</string>
    <string name="data_ignored">data ignored</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="data_saved">data saved</string>
    <string name="fields_cant_be_empty">fields can\'t be empty</string>
    <string name="invalid_mail_or_phone">Invalid Email or Phone number</string>
    <string name="logout">Log Out</string>
    <string name="admin_email">admin@ultramarket.com</string>
    <string name="don_t_have_acount_sign_up">don\'t have acount?\nsign up!</string>
    <string name="google">GOOGLE</string>
    <string name="sign_in_nenjoy_more_features_nmade_for_you">Enjoy More Features\nMade For You</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_email">Create Your Email</string>
    <string name="user_name">User Name (required)</string>
    <string name="confirm_password">Confirm password (required)</string>
    <string name="email_required">Email (required)</string>
    <string name="phone_required">Phone (required)</string>
    <string name="password_required">Password (required)</string>
    <string name="country_optional">Country (optional)</string>
    <string name="invalid_data">Invalid inputs</string>
    <string name="warehouse">Warehouse</string>
    <string name="add_brand">Add Brand</string>
    <string name="name">Name</string>
    <string name="allow_permission">We should have the permission to be allowed to upload your image</string>
    <string name="failed_upload">Failed Uploading</string>
    <string name="uploaded_success">Uploaded Successfully</string>
    <string name="enter_full_data">Enter full data</string>
    <string name="brand_added">Brand added</string>
    <string name="already_signed_in">You are already signed in with email : %1$s</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="upload_image">upload image</string>
    <string name="show_hide_password">show/hide password</string>
    <string name="rate_app">Rate App</string>
    <string name="rate_us">Rate Us</string>
    <string name="help_us_know_what_you_think">Help us know what you think</string>
    <string name="let_us_know_n_how_we_are_doing">Let us know\n How we are doing?</string>
    <string name="we_are_trying_to_provide_you_the_best_we_can_help_us_improve_for_you_your_feedback_is_important_to_us">We are trying to provide you the best we can. Help us improve for you. Your feedback is important to us</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_feedback">Thanks For the Feedback</string>
    <string name="currency_prompt">Currency</string>
    <string name="unit_prompt">Unit</string>
    <string name="product_added">Product Added</string>
    <string name="old_image_deleted">Old image deleted</string>
    <string name="quantity">quantity</string>
    <string name="description">Description</string>
    <string name="failed_to_load_product">OOPS, failed to load product</string>
    <string name="shop_by_categories">Shop By Categories</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="order_cart">Order Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="please_login_to_add_items_to_cart">Please login to add items to your cart</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="count">Count: %1$d</string>
    <string name="order_details">Total Price: %1$.2f %2$s\nTotal Products: %3$d</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="save_this_for_receipant">Save this receipt for receiving order</string>
    <string name="choose_receiving_time">Choose Receiving Time</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_order_details">Order ID: %1$s\nCustomer Name:%2$s\nTotal Price:%3$.2f\nProducts: %4$s\nReceiving Date:%5$s\nOrder Date: %6$s</string>
    <string name="not_ordered_yet">Not Ordered Yet</string>
    <string name="order_sent">Order Sent</string>
    <string name="already_ordered">Already Ordered</string>
    <string name="count_items">%1$d Items</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="order_id">Order ID</string>
    <string name="we_received_your_order">We Received Your Order</string>
    <string name="your_order_is_confirmed">Your Order Is Confirmed</string>
    <string name="your_order_is_ready">Your Order Is Ready</string>
    <string name="your_product_is_on_way">Your Product Is On Way</string>
    <string name="receiving_time">Receiving Time: %1$s</string>
    <string name="order_time">Order TIme: %1$s</string>
    <string name="order_id_is">Order ID: %1$s</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="total_price">Total Price: %1$.2f</string>
    <string name="no_app_send_messages">device doesn\'t support emails</string>
    <string name="about_us_messaage">\"we -UltraMarket- are a delivary market we have all kind of products you want and with good price you cant order any time you want and receive whenever you want \"</string>
    <string name="terms_messaage">terms</string>
    <string name="not_available">Not Available</string>
    <string name="delete_product">Delete Product</string>
    <string name="select_country">you should select your country</string>
    <string name="brand_saved">brand saved</string>
    <string name="order_is_on_way">Order already on way</string>
    <string name="products_count_is_decreasing">You are losing products you want\n try to order soon</string>
    <string name="notifiy_id">com.example.ultramarket</string>
    <string name="notification_topic">offers</string>
    <string name="notification_url">https://fcm.googleapis.com/fcm/send</string>
    <string name="server_key">AAAAWi2_slI:APA91bEdNjnYpt-gOwXh1gm8qOL92jGEDMHYJnKUHy_tjnELXUje2-dncd2CBY9OryB8cAyOyuAI-ZYbA60aYNcZRU1NN8Za5TOtkIlChdBtpp9fSNEeKDJ-kBUsZb8afvV7MduLDfKm</string>
    <string name="invalid_date">Invalid date. please choose valid date</string>
    <string name="brand_is">Brand: %1$s</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="are_you_sure_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="search_for_what_you_want">Search For What you WANT!</string>
    <string name="search_for_product">Search For Product</string>
    <string name="delivered">Delivered</string>
    <string name="ordered_at">Ordered at: %1$s</string>
    <string name="arrives_at">Arrives at: %1$s</string>
    <string name="id_is">ID: %1$s</string>
    <string name="delete_order">Delete Order</string>
    <string name="order_not_delivered_yet">Order Not Delevired Yet</string>
    <string name="delete_order_note">This order won\'t be visible to you any more</string>
    <string name="or">Or</string>
</resources>