<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user_menu_cart"
        android:icon="@drawable/ic_cart_white"
        android:orderInCategory="3"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_menu_notification"
        android:icon="@drawable/notifications_24"
        android:orderInCategory="2"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_menu_search"
        android:icon="@drawable/search_24"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>