<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.userUi.Activities.LocationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/lets_try_to_find_if_we_deliver_to_your_place"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/splash_logo_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/choose_your_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

    <Button
        android:id="@+id/user_location_use_curr_loc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/splash_logo_margin"
        android:background="@color/colorPrimary"
        android:text="@string/use_my_current_location"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/choose_manually"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
</LinearLayout>