<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userUi.Activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/com_facebook_profilepictureview_preset_size_large"
                android:background="@drawable/sign_up_background2"
                android:contentDescription="@string/logo_image"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_text" />

            <TextView
                android:id="@+id/sign_in_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/purple2"
                android:textSize="44sp" />

            <EditText
                android:id="@+id/user_sign_up_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints="@string/user_name"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColor="@color/purple1" />

            <EditText
                android:id="@+id/user_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints="@string/email_required"
                android:hint="@string/email_required"
                android:inputType="textEmailAddress"
                android:textColor="@color/purple1" />

            <EditText
                android:id="@+id/user_sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints="@string/phone_required"
                android:hint="@string/phone_required"
                android:inputType="phone"
                android:textColor="@color/purple1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <EditText
                    android:id="@+id/user_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password_required"
                    android:hint="@string/password_required"
                    android:inputType="textPassword"
                    android:textColor="@color/purple1" />

                <ImageButton
                    android:id="@+id/user_sign_up_show_hide_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:background="@color/transparent"
                    android:src="@drawable/visibility_off_24"
                    android:contentDescription="@string/show_hide_password" />
            </RelativeLayout>

            <EditText
                android:id="@+id/user_sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/purple1" />

            <Spinner
                android:id="@+id/user_sign_up_country"
                style="@android:style/Widget.Spinner.DropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textColor="@color/purple1" />

            <Button
                android:id="@+id/user_sign_up_create_email_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:text="@string/create_your_email"
                android:textColor="@color/purple1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/user_sign_up_create_sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/purple1"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/user_sign_up_progress_bar"
            style="@android:style/Widget.Material.Light.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</ScrollView>
